# Face-Image-Classification

Inference_src/: CMakeLists.txt  README.md
Inference_src/configs/: configs.h
Inference_src/include/: activation.h  convolution.h  flatten.h  fullyconnected.h  numpy.h
Inference_src/src/: activation.c  convolution.c  fullyconnectied.c  numpy.c
Inference_src/test/: conv_test.c  numpy_test.c
Inference_src/traning_dev/include/: batchnorm.h  initialize.h  lossfunction.h
Inference_src/traning_dev/src/: batchnorm.c  lossfunction.c
Training_src/: requirements.txt  setup.py
Training_src/configs/: params.yaml
Training_src/notebooks/: Training_keras.ipynb  Training_model.ipynb
Training_src/scripts/: metrics.py  preprocess_data.py  training_tf.py  visualize_data.py
Training_src/src/: training.py
Training_src/tests/: demo_yolo.py  tempCodeRunnerFile.cu  tempCodeRunnerFile.py  test_conv  test_conv.cu  test_version.py  trash.py
logs/train/: events.out.tfevents.1734236219.minkescanor.26004.0.v2  events.out.tfevents.1734236330.minkescanor.26928.0.v2  events.out.tfevents.1734243395.minkescanor.33083.0.v2  events.out.tfevents.1734243511.minkescanor.33552.0.v2  events.out.tfevents.1734243627.minkescanor.34479.0.v2  events.out.tfevents.1734243755.minkescanor.35353.0.v2  events.out.tfevents.1734243780.minkescanor.36210.0.v2  events.out.tfevents.1734243846.minkescanor.37078.0.v2  events.out.tfevents.1734244089.minkescanor.39645.0.v2  events.out.tfevents.1734244138.minkescanor.40561.0.v2  events.out.tfevents.1734251587.minkescanor.56688.0.v2  (+59 more)
(+43 files in other folders)
